@@ -31,7 +31,8 @@ message = locals().get('message', None)
                 
                 <p py:if="message" class="message" py:content="message"/>
                 
-                ${createPackageInterview(editing, sessionHandle, factories, prevChoices)}
+                ${createPackageInterview(editing, sessionHandle, factories, prevChoices, recipeContents, useOverrideRecipe)}
+
                 </div>
                 <br class="clear" />
                 <img class="pagebottomleft" src="${cfg.staticPath}/apps/mint/images/innerpage_bottomleft.png" alt="" />
