@@ -37,7 +37,7 @@ from mint.helperfuncs import formatProductVersion, truncateForDisplay
                 <div class="page-title">Appliance Creator</div>
                 
                 <p py:if="message" class="message" py:content="message"/>
-                ${createPackageInterview(editing, sessionHandle, factories, prevChoices)}
+                ${createPackageInterview(editing, sessionHandle, factories, prevChoices, recipeContents, useOverrideRecipe)}
             </div>
             <br class="clear"/>
             <img class="pagebottomleft" src="${cfg.staticPath}/apps/mint/images/innerpage_bottomleft.png" alt="" />
